--- a/ngo/index.html
+++ b/ngo/index.html
@@ -429,6 +429,7 @@ the cost of treatment.
 </section>
 
 <footer class="footer-4">
+<div class="container-fluid">
 			<div class="foot-cont">
 				<div class="row mb-5 text-center text-md-left">
 					
@@ -493,13 +494,13 @@ a complimentary 30-days of treatment </div>
 					</div>
 				</div>
 			</div>
-		
+		</div>
 			
 		</footer>
 
 
 <div id= "wafaa_footer" class=""> 
- <div> <strong>  Copyright &copy; 2016 <a href="mailto:eng.wafaa.hamdy@gmail.com" >  Wafaa Hamdy </a> Full stack web developer </strong>  </div>
+ <div> <strong>  Developed By  <a href="mailto:eng.wafaa.hamdy@gmail.com" >  Wafaa Hamdy </a> &copy; 2016 Full stack web developer </strong>  </div>
  <div class="social-icons">
           <ul>
             <li><a class="envelope" href="#"><i class="fa fa-envelope"></i></a></li>
