--- a/ngo/index.html
+++ b/ngo/index.html
@@ -501,7 +501,7 @@ a complimentary 30-days of treatment </div>
 
 
 <div id= "wafaa_footer" class=""> 
- <div> <strong>  Developed By  <a href="mailto:eng.wafaa.hamdy@gmail.com" >  Wafaa Hamdy </a> &copy; 2016 Full stack web developer </strong>  </div>
+ <div> <strong>  Developed by  <a href="mailto:eng.wafaa.hamdy@gmail.com" >  Wafaa Hamdy </a> &copy; 2016 Full stack web developer </strong>  </div>
  <div class="social-icons">
           <ul>
             <li><a class="envelope" href="#"><i class="fa fa-envelope"></i></a></li>
