--- a/ngo/index.html
+++ b/ngo/index.html
@@ -84,7 +84,7 @@
 <section class="container-fluid">
 <div class="row">
 
-<div class="col-lg-4 col-12 collapse navbar-collapse" id="sideNav"   >
+<div class="col-md-4 col-12 collapse navbar-collapse" id="sideNav"   >
 
 <div class="text-center  mb-5 ">
 
@@ -151,7 +151,7 @@ about Addiction </div>  </a>
 </div>
 
 
-<div class="col-lg-8 col-12  full-bg-img" id="sideSlider" >
+<div class="col-md-8 col-12  full-bg-img" id="sideSlider" >
 <div class="container d-flex h-100">
 <div class="col-sm-9 col justify-content-center align-self-center ">
 
@@ -376,14 +376,14 @@ Chat Now </a></div>
 <div class="col-md-5 leftcol">
 <p class=""> Top Drugs of Abuse </p>
 <ul class="list-unstyled">
-<li class="text-nowrap"> <i class="fa fa-arrow-right text-warning" aria-hidden="true"></i> Adderall </li>
-<li class="text-nowrap"> <i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>   Alcohol</li>
-<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i> Alcohol</li> 
-<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i> Ecstasy</li>
-<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i> Heroin </li>
-<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i> Marijuana </li>
-<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i> Methamphetamine </li>
-<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i> Oxycodone </li>
+<li class="text-nowrap"> <i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>&nbsp;Adderall </li>
+<li class="text-nowrap"> <i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>&nbsp;Alcohol</li>
+<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>&nbsp;Alcohol</li> 
+<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>&nbsp;Ecstasy</li>
+<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>&nbsp;Heroin </li>
+<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>&nbsp;Marijuana </li>
+<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>&nbsp;Methamphetamine </li>
+<li class="text-nowrap"><i class="fa fa-arrow-right text-warning" aria-hidden="true"></i>&nbsp;Oxycodone </li>
 </ul>
 </div>
  
