--- a/ngo/index.html
+++ b/ngo/index.html
@@ -81,7 +81,8 @@
 
 </header>  
 
-<section class="container-fluid">
+<section >
+<div class="container-fluid">
 <div class="row">
 
 <div class="col-md-4 col-12 collapse navbar-collapse" id="sideNav"   >
@@ -173,7 +174,7 @@ admissions process.
   </div> </div>
 
 </div>
-
+</div>
 </section>
 
 <section id="section2" >
