--- a/ngo/index.html
+++ b/ngo/index.html
@@ -154,7 +154,7 @@ about Addiction </div>  </a>
 
 <div class="col-md-8 col-12  full-bg-img" id="sideSlider" >
 <div class="container d-flex h-100">
-<div class="col-sm-9 col justify-content-center align-self-center ">
+<div class="col-sm-9 col-12 justify-content-center align-self-center ">
 
 <h3 class="h3-responsive"> Ready to get the help you need?</h3>
 
