--- a/ngo/index.html
+++ b/ngo/index.html
@@ -152,10 +152,26 @@ about Addiction </div>  </a>
 </div>
 
 
-<div class="col-md-8 col-12  full-bg-img" id="sideSlider" >
+<div class="col-md-8 col-12  " id="sideSlider" >
 <div class="container d-flex h-100">
+<div class="row">
+<div class="col-sm-9 col-12 justify-content-center align-self-center ">
 
+<h3 class="h3-responsive"> Ready to get the help you need?</h3>
 
+<div class="lead text-left" >
+When you call us you will be 
+connected to a caring, knowledgable 
+
+Treatment Consultant who will address 
+your concerns, answer your questions and 
+guide you through the ins-and-outs of our simple 
+admissions process.
+
+</div>
+
+</div>
+</div>
   </div> </div>
 
 </div>
