--- a/ngo/index.html
+++ b/ngo/index.html
@@ -152,8 +152,8 @@ about Addiction </div>  </a>
 </div>
 
 
-<div class="col-md-8 col-12  " id="sideSlider" >
-<div class="container d-flex h-100">
+<div class="col-md-8 col-12  full-bg-img"  >
+<div class="container d-flex  ">
 <div class="row">
 <div class="col-sm-9 col-12 justify-content-center align-self-center ">
 
