--- a/ngo/index2.html
+++ b/ngo/index2.html
@@ -85,7 +85,7 @@
 <div class="container-fluid">
 <div class="row">
 
-<div class="col-md-4 col-12 collapse navbar-collapse" id="sideNav"   >
+<div class="col-sm-4 col-12 collapse navbar-collapse" id="sideNav"   >
 
 <div class="text-center  mb-5 ">
 
@@ -152,8 +152,8 @@ about Addiction </div>  </a>
 </div>
 
 
-<div class="col-md-8 col-12  full-bg-img"  >
-<div class="container d-flex  ">
+<div class="col-sm-8 col-12  full-bg-img" id="sideSlider"   >
+<div class="container d-flex" >
 <div class="row">
 <div class="col-sm-9 col-12 justify-content-center align-self-center ">
 
